force-app/main/default/objects/AUP_Core_Functionality_Settings__c/AUP_Core_Functionality_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AUP Core Functionality Settings</label>
</CustomObject>