force-app/main/default/objects/AUP_Core_Functionality_Settings__c/fields/AUP_ENT_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>AUP_ENT_Client_Id__c</fullName>
    <label>AUP ENT Client Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>