force-app/main/default/objects/AUP_Core_Functionality_Settings__c/fields/AUP_ENT_End_Point__c.field-meta.xml
<CustomField>
    <fullName>AUP_ENT_End_Point__c</fullName>
    <label>AUP ENT End Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>