force-app/main/default/objects/AUP_Core_Functionality_Settings__c/fields/AUP_ENT_Execute__c.field-meta.xml
<CustomField>
    <fullName>AUP_ENT_Execute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AUP ENT Execute</label>
    <type>Checkbox</type>
</CustomField>